<resources>
    <string name="app_name">AllFunctions</string>
    <string name="action_settings">Settings</string>
    <string name="android_examples">Android Examples!</string>
    <string name="asynchronize_example">Asynchronize Example</string>
    <string name="explicit_example">Explicit Example</string>
    <string name="title_activity_async">AsyncActivity</string>
    <string name="async_activity">Async Activity</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="add_two_numbers_in_async_task">Add two numbers in async task</string>
    <string name="result_is">Result is</string>
    <string name="widgets_example">Widgets Example</string>
    <string name="send_me_to_explicity_activity_2">Send me to Explicit Activity 2</string>
    <string name="home">Home</string>
    <string name="explicit_activity_2">Explicit Activity 2</string>
    <string name="back">Back</string>
    <string name="implicit_example">Implicit Example</string>
    <string name="implicit_activity">Implicit Activity</string>
    <string name="http">http://</string>
    <string name="www_google_ie">www.google.ie</string>
    <string name="go_to_website">Go to Website</string>
    <string name="widget_activity">Widget Activity</string>
    <string name="floating_button">Floating Button</string>
    <string name="spinner">Spinner</string>
    <string name="seek_bar">Seek Bar</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="floating_button_activity">Floating Button Activity</string>
    <string name="type_two_matching_letters">Type two matching letters</string>
    <string name="spinner_and_auto_complete_activity">Spinner and Auto Complete Activity</string>
    <string name="seek_bar_activity">Seek Bar Activity</string>
    <string name="progress_bar_large_activity">Progress Bar (Large) Activity</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="alert_dialog_activity">Alert Dialog Activity</string>
    <string name="alert_dialog_1">Alert Dialog 1</string>
    <string name="alert_dialog_2">Alert Dialog 2</string>
    <string name="splash_activity">Splash Activity</string>
    <string name="camera_and_gallery_activity">Camera and Gallery Activity</string>
    <string name="widget_examples">Widget Examples</string>
    <string name="default_image">Default Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
