<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tm.allfunctions.com.example.tm.allfunctions.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/android_examples"
        android:id="@+id/textView" />

    <Button
        android:text="@string/asynchronize_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:id="@+id/button" />

    <Button
        android:text="@string/explicit_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/button2" />

    <Button
        android:text="@string/widgets_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@color/colorAccent"
        android:id="@+id/button3" />

    <Button
        android:text="@string/implicit_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:enabled="false"
        android:id="@+id/button9" />

    <Button
        android:text="@string/splash_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@color/colorAccent"
        android:id="@+id/button19" />

    <Button
        android:text="@string/camera_and_gallery_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button19"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@color/colorAccent"
        android:id="@+id/button20" />


</RelativeLayout>
