<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#424242"
    tools:context="com.example.tm.allfunctions.com.example.tm.allfunctions.main.WidgetActivity">

    <TextView
        android:text="@string/widget_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FAFAFA"
        android:id="@+id/textView7" />

    <Button
        android:text="@string/floating_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:enabled="false"
        android:id="@+id/button10"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/button11" />

    <Button
        android:text="@string/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/button12" />

    <Button
        android:text="@string/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/button13" />

    <Button
        android:text="@string/alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/button14" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/homme"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:id="@+id/imageButton6"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-40dp"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
