<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_camera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tm.allfunctions.com.example.tm.allfunctions.main.CameraActivity">

    <TextView
        android:text="@string/camera_and_gallery_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/textView13" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/decision"
        android:layout_marginTop="24dp"
        android:id="@+id/imageView2"
        android:layout_below="@+id/textView13"
        android:layout_alignEnd="@+id/button18" />

    <Button
        android:text="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:id="@+id/button21"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp" />

    <Button
        android:text="@string/gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:id="@+id/button18"
        android:layout_alignBaseline="@+id/button21"
        android:layout_alignBottom="@+id/button21"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/default_image"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="10sp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button18"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:id="@+id/textView14" />


</RelativeLayout>
