<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_progress_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tm.allfunctions.com.example.tm.allfunctions.widget.ProgressBarActivity">

    <TextView
        android:text="@string/progress_bar_large_activity"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView11" />


    <Button
        android:text="@string/hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:id="@+id/button15"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_marginStart="16dp" />

    <Button
        android:text="@string/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button16"
        android:layout_alignBaseline="@+id/button15"
        android:layout_alignBottom="@+id/button15"
        android:layout_toStartOf="@+id/progressBar"
        android:layout_marginEnd="14dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
